<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Star-BookOrbit</string>
    <string name="setup_subtitle">Connect to your BookOrbit library</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_retry">Try Again</string>
    <string name="error_cant_reach">Cannot reach your library.\nCheck your connection or URL.</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_swap_server">Swap server</string>
    <string name="hint_drag_fab">Tip: Hold and drag the button on the right anywhere</string>
    <string name="action_got_it">Got it</string>
    <string name="action_paste_url">Paste URL</string>
    <string name="example_server_url">e.g., http://192.168.1.5:8090</string>
    <string name="settings_title">Settings</string>
    <string name="settings_section_battery">Battery</string>
    <string name="settings_battery_description">Some phones aggressively kill background apps, which can cause this app to reload when switching back from another app. Allowing unrestricted battery usage prevents this.</string>
    <string name="settings_battery_action">Open App Settings</string>
    <string name="settings_battery_unavailable">Battery settings unavailable on this device</string>
    <string name="action_settings">Settings</string>
    <string name="settings_section_page_turn">Navigate Ebook</string>
    <string name="settings_volume_paging">Turn book pages with volume keys</string>
    <string name="settings_link_unavailable">Unable to open link</string>
    <string name="open_user_options">Open user options</string>
    <string name="forward">Forward</string>

    <string name="settings_tap_zones">Turn book pages with tap zones</string>
    <string name="settings_tap_zones_note">Tap zones work with all supported book formats. PDF support is experimental. If you experience any unexpected behavior, please let us know on GitHub.</string>
    <string name="settings_section_support">Community &amp; Connect</string>
    <string name="settings_support">Support the Developer</string>
    <string name="settings_share">Share this App</string>
    <string name="settings_about">About</string>

    <string name="about_title">About Star-BookOrbit</string>
    <string name="about_app_description">A clean, open-source Android client for your self-hosted BookOrbit library.</string>
    <string name="about_developer">Developer</string>
    <string name="about_version_label">Version</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_github">GitHub Repository</string>
    <string name="about_source_code">Source Code</string>
    <string name="about_star_github">Star this on GitHub</string>
    <string name="about_releases">What\'s New</string>
    <string name="about_other_projects">Other Projects by Me</string>
    <string name="about_heliboard_rosepine">Rosé Pine for HeliBoard</string>
    <string name="about_heliboard_themes">HeliBoard &amp; LeanType Themes</string>
    <string name="about_linkding_themes">Linkding Themes</string>

    <string name="share_starbookorbit_text">Check out Star-BookOrbit; an open-source Android client for self-hosted BookOrbit libraries:\nhttps://github.com/Star-Trowa/StarBookOrbit</string>
    <string name="dev_name">Star-Trowa</string>
</resources>